Fixed alignment of about header on mobile devices.

--- a/SweetStyles.css
+++ b/SweetStyles.css
@@ -155,6 +155,15 @@ button:hover {
     .sectionSeperator {
         width:  150px;
     }
+    
+    .aboutHeading {
+        text-align: left;
+        font-size: 0.9em;
+    }
+    
+    .aboutHeading br {
+        display: none;
+    }
 }
 
 .shortLine {
